--- a/src/admin/language/en-GB/en-GB.com_xpert_testimonials.ini
+++ b/src/admin/language/en-GB/en-GB.com_xpert_testimonials.ini
@@ -3,119 +3,119 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
-COM_XPERT_TEXTIMONIALS="Xpert Testimonials"
-COM_XPERT_TEXTIMONIALS_ACCESS_HEADING="Access"
-COM_XPERT_TEXTIMONIALS_BATCH_OPTIONS="Batch process the selected links"
-COM_XPERT_TEXTIMONIALS_BATCH_TIP="If a category is selected for move/copy, any actions selected will be applied to the copied or moved links. Otherwise, all actions are applied to the selected links."
-COM_XPERT_TEXTIMONIALS_CATEGORIES_DESC="These settings apply for Xpert Testimonials Categories Options unless they are changed for a specific menu item."
-COM_XPERT_TEXTIMONIALS_CATEGORY_DESC="These settings apply for Xpert Testimonials Category Options unless they are changed for a specific menu item."
-COM_XPERT_TEXTIMONIALS_COMPONENT_DESC="These settings apply for Xpert Testimonials unless they are changed for a specific menu item or Testimonial."
-COM_XPERT_TEXTIMONIALS_COMPONENT_LABEL="Testimonial"
-COM_XPERT_TEXTIMONIALS_CONFIG_INTEGRATION_SETTINGS_DESC="These settings determine how the Xpert Testimonials Component will integrate with other extensions."
-COM_XPERT_TEXTIMONIALS_CONFIGURATION="Xpert Testimonials Manager Options"
-COM_XPERT_TEXTIMONIALS_EDIT_TESTIMONIAL="Edit Testimonial"
-COM_XPERT_TEXTIMONIALS_ERR_TABLES_NAME="There is already a Testimonial with that name in this category. Please try again."
-COM_XPERT_TEXTIMONIALS_ERR_TABLES_PROVIDE_URL="Please provide a valid URL"
-COM_XPERT_TEXTIMONIALS_ERR_TABLES_TITLE="Your Testimonial must contain a title."
-COM_XPERT_TEXTIMONIALS_ERROR_UNIQUE_ALIAS="Another Testimonial from this category has the same alias"
-COM_XPERT_TEXTIMONIALS_FIELD_ALIAS_DESC="The alias is for internal use only. Leave this blank and Joomla will fill in a default value from the title. It has to be unique for each Testimonial in the same category."
-COM_XPERT_TEXTIMONIALS_FIELD_CATEGORY_DESC="Choose a category for this Testimonial."
-COM_XPERT_TEXTIMONIALS_FIELD_CATEGORYCHOOSE_DESC="Please choose a Xpert Testimonials category to display."
-COM_XPERT_TEXTIMONIALS_FIELD_CONFIG_CAT_SHOWNUMBERS_DESC="Show/Hide the number of Xpert Testimonials in each Category."
-COM_XPERT_TEXTIMONIALS_FIELD_CONFIG_CAT_SHOWNUMBERS_LABEL="# Xpert Testimonials"
-COM_XPERT_TEXTIMONIALS_FIELD_CONFIG_COUNTCLICKS_DESC="If set to yes, the number of times the link has been clicked will be recorded."
-COM_XPERT_TEXTIMONIALS_FIELD_CONFIG_COUNTCLICKS_LABEL="Count Clicks"
-COM_XPERT_TEXTIMONIALS_FIELD_CONFIG_DESCRIPTION_DESC="Show/Hide the description below."
-COM_XPERT_TEXTIMONIALS_FIELD_CONFIG_HITS_DESC="Show/Hide hits."
-COM_XPERT_TEXTIMONIALS_FIELD_CONFIG_ICON_DESC="If Icon is chosen above, select an icon to display with the Xpert Testimonials. If none is selected, the default icon will be used."
-COM_XPERT_TEXTIMONIALS_FIELD_CONFIG_ICON_LABEL="Select Icon"
-COM_XPERT_TEXTIMONIALS_FIELD_CONFIG_LINKDESCRIPTION_DESC="Show/Hide the links description."
-COM_XPERT_TEXTIMONIALS_FIELD_CONFIG_LINKDESCRIPTION_LABEL="Links Description"
-COM_XPERT_TEXTIMONIALS_FIELD_CONFIG_OTHERCATS_DESC="Show/hide other categories."
-COM_XPERT_TEXTIMONIALS_FIELD_CONFIG_OTHERCATS_LABEL="Other Categories"
-COM_XPERT_TEXTIMONIALS_FIELD_CONFIG_SHOWREPORT_DESC="Show/Hide the Report Bad Link option."
-COM_XPERT_TEXTIMONIALS_FIELD_CONFIG_SHOWREPORT_LABEL="Reports"
-COM_XPERT_TEXTIMONIALS_FIELD_COUNTCLICKS_DESC="If set to yes, the number of times the link has been clicked will be recorded."
-COM_XPERT_TEXTIMONIALS_FIELD_COUNTCLICKS_LABEL="Count Clicks"
-COM_XPERT_TEXTIMONIALS_FIELD_DESCRIPTION_DESC="Enter a description for the Testimonial."
-COM_XPERT_TEXTIMONIALS_FIELD_DISPLAY_NUM_DESC="Default number of Xpert Testimonials to list on a page."
-COM_XPERT_TEXTIMONIALS_FIELD_DISPLAY_NUM_LABEL="# of Xpert Testimonials to List"
-COM_XPERT_TEXTIMONIALS_FIELD_FIRST_DESC="The image to be displayed."
-COM_XPERT_TEXTIMONIALS_FIELD_FIRST_LABEL="First Image"
+COM_XPERT_TESTIMONIALS="Xpert Testimonials"
+COM_XPERT_TESTIMONIALS_ACCESS_HEADING="Access"
+COM_XPERT_TESTIMONIALS_BATCH_OPTIONS="Batch process the selected links"
+COM_XPERT_TESTIMONIALS_BATCH_TIP="If a category is selected for move/copy, any actions selected will be applied to the copied or moved links. Otherwise, all actions are applied to the selected links."
+COM_XPERT_TESTIMONIALS_CATEGORIES_DESC="These settings apply for Xpert Testimonials Categories Options unless they are changed for a specific menu item."
+COM_XPERT_TESTIMONIALS_CATEGORY_DESC="These settings apply for Xpert Testimonials Category Options unless they are changed for a specific menu item."
+COM_XPERT_TESTIMONIALS_COMPONENT_DESC="These settings apply for Xpert Testimonials unless they are changed for a specific menu item or Testimonial."
+COM_XPERT_TESTIMONIALS_COMPONENT_LABEL="Testimonial"
+COM_XPERT_TESTIMONIALS_CONFIG_INTEGRATION_SETTINGS_DESC="These settings determine how the Xpert Testimonials Component will integrate with other extensions."
+COM_XPERT_TESTIMONIALS_CONFIGURATION="Xpert Testimonials Manager Options"
+COM_XPERT_TESTIMONIALS_EDIT_TESTIMONIAL="Edit Testimonial"
+COM_XPERT_TESTIMONIALS_ERR_TABLES_NAME="There is already a Testimonial with that name in this category. Please try again."
+COM_XPERT_TESTIMONIALS_ERR_TABLES_PROVIDE_URL="Please provide a valid URL"
+COM_XPERT_TESTIMONIALS_ERR_TABLES_TITLE="Your Testimonial must contain a title."
+COM_XPERT_TESTIMONIALS_ERROR_UNIQUE_ALIAS="Another Testimonial from this category has the same alias"
+COM_XPERT_TESTIMONIALS_FIELD_ALIAS_DESC="The alias is for internal use only. Leave this blank and Joomla will fill in a default value from the title. It has to be unique for each Testimonial in the same category."
+COM_XPERT_TESTIMONIALS_FIELD_CATEGORY_DESC="Choose a category for this Testimonial."
+COM_XPERT_TESTIMONIALS_FIELD_CATEGORYCHOOSE_DESC="Please choose a Xpert Testimonials category to display."
+COM_XPERT_TESTIMONIALS_FIELD_CONFIG_CAT_SHOWNUMBERS_DESC="Show/Hide the number of Xpert Testimonials in each Category."
+COM_XPERT_TESTIMONIALS_FIELD_CONFIG_CAT_SHOWNUMBERS_LABEL="# Xpert Testimonials"
+COM_XPERT_TESTIMONIALS_FIELD_CONFIG_COUNTCLICKS_DESC="If set to yes, the number of times the link has been clicked will be recorded."
+COM_XPERT_TESTIMONIALS_FIELD_CONFIG_COUNTCLICKS_LABEL="Count Clicks"
+COM_XPERT_TESTIMONIALS_FIELD_CONFIG_DESCRIPTION_DESC="Show/Hide the description below."
+COM_XPERT_TESTIMONIALS_FIELD_CONFIG_HITS_DESC="Show/Hide hits."
+COM_XPERT_TESTIMONIALS_FIELD_CONFIG_ICON_DESC="If Icon is chosen above, select an icon to display with the Xpert Testimonials. If none is selected, the default icon will be used."
+COM_XPERT_TESTIMONIALS_FIELD_CONFIG_ICON_LABEL="Select Icon"
+COM_XPERT_TESTIMONIALS_FIELD_CONFIG_LINKDESCRIPTION_DESC="Show/Hide the links description."
+COM_XPERT_TESTIMONIALS_FIELD_CONFIG_LINKDESCRIPTION_LABEL="Links Description"
+COM_XPERT_TESTIMONIALS_FIELD_CONFIG_OTHERCATS_DESC="Show/hide other categories."
+COM_XPERT_TESTIMONIALS_FIELD_CONFIG_OTHERCATS_LABEL="Other Categories"
+COM_XPERT_TESTIMONIALS_FIELD_CONFIG_SHOWREPORT_DESC="Show/Hide the Report Bad Link option."
+COM_XPERT_TESTIMONIALS_FIELD_CONFIG_SHOWREPORT_LABEL="Reports"
+COM_XPERT_TESTIMONIALS_FIELD_COUNTCLICKS_DESC="If set to yes, the number of times the link has been clicked will be recorded."
+COM_XPERT_TESTIMONIALS_FIELD_COUNTCLICKS_LABEL="Count Clicks"
+COM_XPERT_TESTIMONIALS_FIELD_DESCRIPTION_DESC="Enter a description for the Testimonial."
+COM_XPERT_TESTIMONIALS_FIELD_DISPLAY_NUM_DESC="Default number of Xpert Testimonials to list on a page."
+COM_XPERT_TESTIMONIALS_FIELD_DISPLAY_NUM_LABEL="# of Xpert Testimonials to List"
+COM_XPERT_TESTIMONIALS_FIELD_FIRST_DESC="The image to be displayed."
+COM_XPERT_TESTIMONIALS_FIELD_FIRST_LABEL="First Image"
 
-COM_XPERT_TEXTIMONIALS_FIELD_HEIGHT_DESC="Height of the target popup or modal window. Defaults to 600x500 if one field is left empty."
-COM_XPERT_TEXTIMONIALS_FIELD_HEIGHT_LABEL="Height"
-COM_XPERT_TEXTIMONIALS_FIELD_ICON_DESC="Displays a text, an icon or nothing with the Xpert Testimonials. Default is 'Icon'."
-COM_XPERT_TEXTIMONIALS_FIELD_ICON_LABEL="Text/Icon/Testimonial Only"
-COM_XPERT_TEXTIMONIALS_FIELD_ICON_OPTION_ICON="Icon"
-COM_XPERT_TEXTIMONIALS_FIELD_ICON_OPTION_TEXT="Text"
-COM_XPERT_TEXTIMONIALS_FIELD_ICON_OPTION_TESTIMONIAL="Testimonial Only"
-COM_XPERT_TEXTIMONIALS_FIELD_IMAGE_ALT_DESC="Alternative text used for visitors without access to images. Replaced with caption text if it is present."
-COM_XPERT_TEXTIMONIALS_FIELD_IMAGE_ALT_LABEL="Alt Text"
-COM_XPERT_TEXTIMONIALS_FIELD_IMAGE_CAPTION_DESC="Caption attached to the image."
-COM_XPERT_TEXTIMONIALS_FIELD_IMAGE_CAPTION_LABEL="Caption"
+COM_XPERT_TESTIMONIALS_FIELD_HEIGHT_DESC="Height of the target popup or modal window. Defaults to 600x500 if one field is left empty."
+COM_XPERT_TESTIMONIALS_FIELD_HEIGHT_LABEL="Height"
+COM_XPERT_TESTIMONIALS_FIELD_ICON_DESC="Displays a text, an icon or nothing with the Xpert Testimonials. Default is 'Icon'."
+COM_XPERT_TESTIMONIALS_FIELD_ICON_LABEL="Text/Icon/Testimonial Only"
+COM_XPERT_TESTIMONIALS_FIELD_ICON_OPTION_ICON="Icon"
+COM_XPERT_TESTIMONIALS_FIELD_ICON_OPTION_TEXT="Text"
+COM_XPERT_TESTIMONIALS_FIELD_ICON_OPTION_TESTIMONIAL="Testimonial Only"
+COM_XPERT_TESTIMONIALS_FIELD_IMAGE_ALT_DESC="Alternative text used for visitors without access to images. Replaced with caption text if it is present."
+COM_XPERT_TESTIMONIALS_FIELD_IMAGE_ALT_LABEL="Alt Text"
+COM_XPERT_TESTIMONIALS_FIELD_IMAGE_CAPTION_DESC="Caption attached to the image."
+COM_XPERT_TESTIMONIALS_FIELD_IMAGE_CAPTION_LABEL="Caption"
 
-COM_XPERT_TEXTIMONIALS_FIELD_LANGUAGE_DESC="Assign a language to this Testimonial."
-COM_XPERT_TEXTIMONIALS_FIELD_MODIFIED_DESC="The date and time the link was last modified."
-COM_XPERT_TEXTIMONIALS_FIELD_SECOND_DESC="The second image to be displayed."
-COM_XPERT_TEXTIMONIALS_FIELD_SECOND_LABEL="Second Image"
-COM_XPERT_TEXTIMONIALS_FIELD_SELECT_CATEGORY_DESC="Select a Xpert Testimonials category to display."
-COM_XPERT_TEXTIMONIALS_FIELD_SELECT_CATEGORY_LABEL="Select a Category"
-COM_XPERT_TEXTIMONIALS_FIELD_SHOW_CAT_TAGS_DESC="Show the tags for a category."
-COM_XPERT_TEXTIMONIALS_FIELD_SHOW_CAT_TAGS_LABEL="Show Tags"
-COM_XPERT_TEXTIMONIALS_FIELD_SHOW_TAGS_DESC="Show the tags for a Testimonial."
-COM_XPERT_TEXTIMONIALS_FIELD_SHOW_TAGS_LABEL="Show Tags"
-COM_XPERT_TEXTIMONIALS_FIELD_STATE_DESC="Set publication status."
-COM_XPERT_TEXTIMONIALS_FIELD_TARGET_DESC="Target browser window when the link is clicked."
-COM_XPERT_TEXTIMONIALS_FIELD_TARGET_LABEL="Target"
-COM_XPERT_TEXTIMONIALS_FIELD_TITLE_DESC="Testimonial must have a title."
-COM_XPERT_TEXTIMONIALS_FIELD_URL_DESC="You must enter a URL. IDN (International) Links are converted to punycode when they are saved."
-COM_XPERT_TEXTIMONIALS_FIELD_URL_LABEL="URL"
-COM_XPERT_TEXTIMONIALS_FIELD_VALUE_REPORTED="Reported"
-COM_XPERT_TEXTIMONIALS_FIELD_VERSION_DESC="A count of the number of times this Testimonial has been revised."
-COM_XPERT_TEXTIMONIALS_FIELD_VERSION_LABEL="Revision"
-COM_XPERT_TEXTIMONIALS_FIELD_WIDTH_DESC="Width of the target popup or modal window. Defaults to 600x500 if one field is left empty."
-COM_XPERT_TEXTIMONIALS_FIELD_WIDTH_LABEL="Width"
-COM_XPERT_TEXTIMONIALS_FIELDSET_IMAGES="Images"
-COM_XPERT_TEXTIMONIALS_FIELDSET_OPTIONS="Options"
-COM_XPERT_TEXTIMONIALS_FILTER_CATEGORY="Filter Category"
-COM_XPERT_TEXTIMONIALS_FILTER_STATE="Filter State"
-COM_XPERT_TEXTIMONIALS_FLOAT_DESC="Controls placement of the image."
-COM_XPERT_TEXTIMONIALS_FLOAT_LABEL="Image Float"
-COM_XPERT_TEXTIMONIALS_HITS_DESC="Number of hits for this Testimonial."
-COM_XPERT_TEXTIMONIALS_LEFT="Left"
-COM_XPERT_TEXTIMONIALS_LIST_LAYOUT_DESC="These settings apply for Xpert Testimonials List Layout Options unless they are changed for a specific menu item."
-COM_XPERT_TEXTIMONIALS_MANAGER_TESTIMONIAL="Xpert Testimonials"
-COM_XPERT_TEXTIMONIALS_MANAGER_TESTIMONIALS="Xpert Testimonials"
-COM_XPERT_TEXTIMONIALS_MANAGER_TESTIMONIAL_EDIT="Testimonial: Edit"
-COM_XPERT_TEXTIMONIALS_MANAGER_TESTIMONIAL_NEW="Testimonial: New"
-COM_XPERT_TEXTIMONIALS_N_ITEMS_ARCHIVED="%d Xpert Testimonials successfully archived."
-COM_XPERT_TEXTIMONIALS_N_ITEMS_ARCHIVED_1="%d Testimonial successfully archived."
-COM_XPERT_TEXTIMONIALS_N_ITEMS_CHECKED_IN_0="No Testimonial successfully checked in."
-COM_XPERT_TEXTIMONIALS_N_ITEMS_CHECKED_IN_1="%d Testimonial successfully checked in."
-COM_XPERT_TEXTIMONIALS_N_ITEMS_CHECKED_IN_MORE="%d Xpert Testimonials successfully checked in."
-COM_XPERT_TEXTIMONIALS_N_ITEMS_DELETED="%d Xpert Testimonials successfully deleted."
-COM_XPERT_TEXTIMONIALS_N_ITEMS_DELETED_1="%d Testimonial successfully deleted."
-COM_XPERT_TEXTIMONIALS_N_ITEMS_PUBLISHED="%d Xpert Testimonials successfully published."
-COM_XPERT_TEXTIMONIALS_N_ITEMS_PUBLISHED_1="%d Testimonial successfully published."
-COM_XPERT_TEXTIMONIALS_N_ITEMS_TRASHED="%d Xpert Testimonials successfully trashed."
-COM_XPERT_TEXTIMONIALS_N_ITEMS_TRASHED_1="%d Testimonial successfully trashed."
-COM_XPERT_TEXTIMONIALS_N_ITEMS_UNPUBLISHED="%d Xpert Testimonials successfully unpublished."
-COM_XPERT_TEXTIMONIALS_N_ITEMS_UNPUBLISHED_1="%d Testimonial successfully unpublished."
-COM_XPERT_TEXTIMONIALS_NEW_TESTIMONIAL="New Testimonial"
-COM_XPERT_TEXTIMONIALS_NONE="None"
-COM_XPERT_TEXTIMONIALS_OPTION_FILTER_ACCESS="- Filter Access -"
-COM_XPERT_TEXTIMONIALS_OPTION_FILTER_CATEGORY="- Filter Category -"
-COM_XPERT_TEXTIMONIALS_OPTION_FILTER_PUBLISHED="- Filter State -"
-COM_XPERT_TEXTIMONIALS_OPTIONS="Options"
-COM_XPERT_TEXTIMONIALS_ORDER_HEADING="Order"
-COM_XPERT_TEXTIMONIALS_RIGHT="Right"
-COM_XPERT_TEXTIMONIALS_SAVE_SUCCESS="Testimonial successfully saved"
-COM_XPERT_TEXTIMONIALS_SEARCH_IN_TITLE="Search in title"
-COM_XPERT_TEXTIMONIALS_SHOW_EMPTY_CATEGORIES_DESC="If Show, empty categories will display. A category is only empty - if it has no Xpert Testimonials or subcategories."
-COM_XPERT_TEXTIMONIALS_SUBMENU_CATEGORIES="Categories"
-COM_XPERT_TEXTIMONIALS_SUBMENU_TESTIMONIALS="Xpert Testimonials"
-COM_XPERT_TEXTIMONIALS_XML_DESCRIPTION="Component for Xpert Testimonials management"
+COM_XPERT_TESTIMONIALS_FIELD_LANGUAGE_DESC="Assign a language to this Testimonial."
+COM_XPERT_TESTIMONIALS_FIELD_MODIFIED_DESC="The date and time the link was last modified."
+COM_XPERT_TESTIMONIALS_FIELD_SECOND_DESC="The second image to be displayed."
+COM_XPERT_TESTIMONIALS_FIELD_SECOND_LABEL="Second Image"
+COM_XPERT_TESTIMONIALS_FIELD_SELECT_CATEGORY_DESC="Select a Xpert Testimonials category to display."
+COM_XPERT_TESTIMONIALS_FIELD_SELECT_CATEGORY_LABEL="Select a Category"
+COM_XPERT_TESTIMONIALS_FIELD_SHOW_CAT_TAGS_DESC="Show the tags for a category."
+COM_XPERT_TESTIMONIALS_FIELD_SHOW_CAT_TAGS_LABEL="Show Tags"
+COM_XPERT_TESTIMONIALS_FIELD_SHOW_TAGS_DESC="Show the tags for a Testimonial."
+COM_XPERT_TESTIMONIALS_FIELD_SHOW_TAGS_LABEL="Show Tags"
+COM_XPERT_TESTIMONIALS_FIELD_STATE_DESC="Set publication status."
+COM_XPERT_TESTIMONIALS_FIELD_TARGET_DESC="Target browser window when the link is clicked."
+COM_XPERT_TESTIMONIALS_FIELD_TARGET_LABEL="Target"
+COM_XPERT_TESTIMONIALS_FIELD_TITLE_DESC="Testimonial must have a title."
+COM_XPERT_TESTIMONIALS_FIELD_URL_DESC="You must enter a URL. IDN (International) Links are converted to punycode when they are saved."
+COM_XPERT_TESTIMONIALS_FIELD_URL_LABEL="URL"
+COM_XPERT_TESTIMONIALS_FIELD_VALUE_REPORTED="Reported"
+COM_XPERT_TESTIMONIALS_FIELD_VERSION_DESC="A count of the number of times this Testimonial has been revised."
+COM_XPERT_TESTIMONIALS_FIELD_VERSION_LABEL="Revision"
+COM_XPERT_TESTIMONIALS_FIELD_WIDTH_DESC="Width of the target popup or modal window. Defaults to 600x500 if one field is left empty."
+COM_XPERT_TESTIMONIALS_FIELD_WIDTH_LABEL="Width"
+COM_XPERT_TESTIMONIALS_FIELDSET_IMAGES="Images"
+COM_XPERT_TESTIMONIALS_FIELDSET_OPTIONS="Options"
+COM_XPERT_TESTIMONIALS_FILTER_CATEGORY="Filter Category"
+COM_XPERT_TESTIMONIALS_FILTER_STATE="Filter State"
+COM_XPERT_TESTIMONIALS_FLOAT_DESC="Controls placement of the image."
+COM_XPERT_TESTIMONIALS_FLOAT_LABEL="Image Float"
+COM_XPERT_TESTIMONIALS_HITS_DESC="Number of hits for this Testimonial."
+COM_XPERT_TESTIMONIALS_LEFT="Left"
+COM_XPERT_TESTIMONIALS_LIST_LAYOUT_DESC="These settings apply for Xpert Testimonials List Layout Options unless they are changed for a specific menu item."
+COM_XPERT_TESTIMONIALS_MANAGER_TESTIMONIAL="Xpert Testimonials"
+COM_XPERT_TESTIMONIALS_MANAGER_TESTIMONIALS="Xpert Testimonials"
+COM_XPERT_TESTIMONIALS_MANAGER_TESTIMONIAL_EDIT="Testimonial: Edit"
+COM_XPERT_TESTIMONIALS_MANAGER_TESTIMONIAL_NEW="Testimonial: New"
+COM_XPERT_TESTIMONIALS_N_ITEMS_ARCHIVED="%d Xpert Testimonials successfully archived."
+COM_XPERT_TESTIMONIALS_N_ITEMS_ARCHIVED_1="%d Testimonial successfully archived."
+COM_XPERT_TESTIMONIALS_N_ITEMS_CHECKED_IN_0="No Testimonial successfully checked in."
+COM_XPERT_TESTIMONIALS_N_ITEMS_CHECKED_IN_1="%d Testimonial successfully checked in."
+COM_XPERT_TESTIMONIALS_N_ITEMS_CHECKED_IN_MORE="%d Xpert Testimonials successfully checked in."
+COM_XPERT_TESTIMONIALS_N_ITEMS_DELETED="%d Xpert Testimonials successfully deleted."
+COM_XPERT_TESTIMONIALS_N_ITEMS_DELETED_1="%d Testimonial successfully deleted."
+COM_XPERT_TESTIMONIALS_N_ITEMS_PUBLISHED="%d Xpert Testimonials successfully published."
+COM_XPERT_TESTIMONIALS_N_ITEMS_PUBLISHED_1="%d Testimonial successfully published."
+COM_XPERT_TESTIMONIALS_N_ITEMS_TRASHED="%d Xpert Testimonials successfully trashed."
+COM_XPERT_TESTIMONIALS_N_ITEMS_TRASHED_1="%d Testimonial successfully trashed."
+COM_XPERT_TESTIMONIALS_N_ITEMS_UNPUBLISHED="%d Xpert Testimonials successfully unpublished."
+COM_XPERT_TESTIMONIALS_N_ITEMS_UNPUBLISHED_1="%d Testimonial successfully unpublished."
+COM_XPERT_TESTIMONIALS_NEW_TESTIMONIAL="New Testimonial"
+COM_XPERT_TESTIMONIALS_NONE="None"
+COM_XPERT_TESTIMONIALS_OPTION_FILTER_ACCESS="- Filter Access -"
+COM_XPERT_TESTIMONIALS_OPTION_FILTER_CATEGORY="- Filter Category -"
+COM_XPERT_TESTIMONIALS_OPTION_FILTER_PUBLISHED="- Filter State -"
+COM_XPERT_TESTIMONIALS_OPTIONS="Options"
+COM_XPERT_TESTIMONIALS_ORDER_HEADING="Order"
+COM_XPERT_TESTIMONIALS_RIGHT="Right"
+COM_XPERT_TESTIMONIALS_SAVE_SUCCESS="Testimonial successfully saved"
+COM_XPERT_TESTIMONIALS_SEARCH_IN_TITLE="Search in title"
+COM_XPERT_TESTIMONIALS_SHOW_EMPTY_CATEGORIES_DESC="If Show, empty categories will display. A category is only empty - if it has no Xpert Testimonials or subcategories."
+COM_XPERT_TESTIMONIALS_SUBMENU_CATEGORIES="Categories"
+COM_XPERT_TESTIMONIALS_SUBMENU_TESTIMONIALS="Xpert Testimonials"
+COM_XPERT_TESTIMONIALS_XML_DESCRIPTION="Component for Xpert Testimonials management"
 JGLOBAL_NO_ITEM_SELECTED="No Xpert Testimonials selected"
 JGLOBAL_NEWITEMSLAST_DESC="New Xpert Testimonials default to the last position. Ordering can be changed after this Testimonial is saved."
 JLIB_APPLICATION_ERROR_BATCH_CANNOT_CREATE="You are not allowed to create new Xpert Testimonials in this category."
