first testimonial created

--- a/src/admin/language/en-GB/en-GB.com_xpert_testimonials.ini
+++ b/src/admin/language/en-GB/en-GB.com_xpert_testimonials.ini
@@ -18,6 +18,12 @@ COM_XPERT_TESTIMONIALS_ERR_TABLES_NAME="There is already a Testimonial with that
 COM_XPERT_TESTIMONIALS_ERR_TABLES_PROVIDE_URL="Please provide a valid URL"
 COM_XPERT_TESTIMONIALS_ERR_TABLES_TITLE="Your Testimonial must contain a title."
 COM_XPERT_TESTIMONIALS_ERROR_UNIQUE_ALIAS="Another Testimonial from this category has the same alias"
+COM_XPERT_TESTIMONIALS_FIELD_NAME_LABEL = "Provider Name"
+COM_XPERT_TESTIMONIALS_FIELD_NAME_DESC = "Testimonial provider Name"
+COM_XPERT_TESTIMONIALS_FIELD_DESIGNATION_LABEL = "Designation"
+COM_XPERT_TESTIMONIALS_FIELD_DESIGNATION_DESC = "Testimonial provider's designation"
+COM_XPERT_TESTIMONIALS_FIELD_EMAIL_LABEL = "Email"
+COM_XPERT_TESTIMONIALS_FIELD_EMAIL_DESC = "Testimonial provider's email"
 COM_XPERT_TESTIMONIALS_FIELD_ALIAS_DESC="The alias is for internal use only. Leave this blank and Joomla will fill in a default value from the title. It has to be unique for each Testimonial in the same category."
 COM_XPERT_TESTIMONIALS_FIELD_CATEGORY_DESC="Choose a category for this Testimonial."
 COM_XPERT_TESTIMONIALS_FIELD_CATEGORYCHOOSE_DESC="Please choose a Xpert Testimonials category to display."
@@ -40,8 +46,8 @@ COM_XPERT_TESTIMONIALS_FIELD_COUNTCLICKS_LABEL="Count Clicks"
 COM_XPERT_TESTIMONIALS_FIELD_DESCRIPTION_DESC="Enter a description for the Testimonial."
 COM_XPERT_TESTIMONIALS_FIELD_DISPLAY_NUM_DESC="Default number of Xpert Testimonials to list on a page."
 COM_XPERT_TESTIMONIALS_FIELD_DISPLAY_NUM_LABEL="# of Xpert Testimonials to List"
-COM_XPERT_TESTIMONIALS_FIELD_FIRST_DESC="The image to be displayed."
-COM_XPERT_TESTIMONIALS_FIELD_FIRST_LABEL="First Image"
+COM_XPERT_TESTIMONIALS_FIELD_AUTHOR_IMAGE_DESC="The testimonials author profile image"
+COM_XPERT_TESTIMONIALS_FIELD_AUTHOR_IMAGE_LABEL="Author Image"
 
 COM_XPERT_TESTIMONIALS_FIELD_HEIGHT_DESC="Height of the target popup or modal window. Defaults to 600x500 if one field is left empty."
 COM_XPERT_TESTIMONIALS_FIELD_HEIGHT_LABEL="Height"
