--- a/src/admin/language/en-GB/en-GB.com_xpert_testimonials.sys.ini
+++ b/src/admin/language/en-GB/en-GB.com_xpert_testimonials.sys.ini
@@ -18,5 +18,5 @@ COM_XPERT_TESTIMONIALS_CONTENT_TYPE_CATEGORY="Xpert Testimonials Category"
 COM_XPERT_TESTIMONIALS_FORM_VIEW_DEFAULT_DESC="Display a form to submit a Testimonial in the Frontend."
 COM_XPERT_TESTIMONIALS_FORM_VIEW_DEFAULT_OPTION="Default"
 COM_XPERT_TESTIMONIALS_FORM_VIEW_DEFAULT_TITLE="Submit a Testimonial"
-COM_XPERT_TESTIMONIALS_LINKS="Links"
+COM_XPERT_TESTIMONIALS_LINKS="Testimonial"
 COM_XPERT_TESTIMONIALS_XML_DESCRIPTION="Component for Xpert Testimonials management."
