--- a/src/admin/language/en-GB/en-GB.com_xpert_testimonials.ini
+++ b/src/admin/language/en-GB/en-GB.com_xpert_testimonials.ini
@@ -28,7 +28,7 @@ COM_XPERT_TESTIMONIALS_FIELD_ALIAS_DESC="The alias is for internal use only. Lea
 COM_XPERT_TESTIMONIALS_FIELD_CATEGORY_DESC="Choose a category for this Testimonial."
 COM_XPERT_TESTIMONIALS_FIELD_CATEGORYCHOOSE_DESC="Please choose a Xpert Testimonials category to display."
 COM_XPERT_TESTIMONIALS_FIELD_CONFIG_CAT_SHOWNUMBERS_DESC="Show/Hide the number of Xpert Testimonials in each Category."
-COM_XPERT_TESTIMONIALS_FIELD_CONFIG_CAT_SHOWNUMBERS_LABEL="# Xpert Testimonials"
+COM_XPERT_TESTIMONIALS_FIELD_CONFIG_CAT_SHOWNUMBERS_LABEL="# Num Testimonials"
 COM_XPERT_TESTIMONIALS_FIELD_CONFIG_COUNTCLICKS_DESC="If set to yes, the number of times the link has been clicked will be recorded."
 COM_XPERT_TESTIMONIALS_FIELD_CONFIG_COUNTCLICKS_LABEL="Count Clicks"
 COM_XPERT_TESTIMONIALS_FIELD_CONFIG_DESCRIPTION_DESC="Show/Hide the description below."
