gulp script fix n code update

--- a/src/site/language/en-GB/en-GB.com_xpert_testimonials.ini
+++ b/src/site/language/en-GB/en-GB.com_xpert_testimonials.ini
@@ -13,6 +13,16 @@ COM_XPERT_TESTIMONIALS_FIELD_CATEGORY_DESC="You must select a Category."
 COM_XPERT_TESTIMONIALS_FIELD_DESCRIPTION_DESC="Enter a description for your Testimonial."
 COM_XPERT_TESTIMONIALS_FIELD_URL_DESC="You must enter a URL."
 COM_XPERT_TESTIMONIALS_FIELD_URL_LABEL="URL"
+
+COM_XPERT_TESTIMONIALS_FIELD_NAME_LABEL="Name"
+COM_XPERT_TESTIMONIALS_FIELD_NAME_DESC="Your name"
+
+COM_XPERT_TESTIMONIALS_FIELD_DESIGNATION_LABEL="Designation"
+COM_XPERT_TESTIMONIALS_FIELD_DESIGNATION_DESC="Your designation"
+
+COM_XPERT_TESTIMONIALS_FIELD_EMAIL_LABEL="Email"
+COM_XPERT_TESTIMONIALS_FIELD_EMAIL_DESC="Your email"
+
 COM_XPERT_TESTIMONIALS_FORM_CREATE_TESTIMONIAL="Submit a Testimonial"
 COM_XPERT_TESTIMONIALS_GRID_TITLE="Title"
 COM_XPERT_TESTIMONIALS_LINK="Testimonial"
