--- a/src/site/language/en-GB/en-GB.com_xpert_testimonials.ini
+++ b/src/site/language/en-GB/en-GB.com_xpert_testimonials.ini
@@ -23,6 +23,9 @@ COM_XPERT_TESTIMONIALS_FIELD_DESIGNATION_DESC="Your designation"
 COM_XPERT_TESTIMONIALS_FIELD_EMAIL_LABEL="Email"
 COM_XPERT_TESTIMONIALS_FIELD_EMAIL_DESC="Your email"
 
+COM_XPERT_TESTIMONIALS_FIELD_AUTHOR_IMAGE_LABEL = "Image"
+COM_XPERT_TESTIMONIALS_FIELD_AUTHOR_IMAGE_DESC = "Your profile image"
+
 COM_XPERT_TESTIMONIALS_FORM_CREATE_TESTIMONIAL="Submit a Testimonial"
 COM_XPERT_TESTIMONIALS_GRID_TITLE="Title"
 COM_XPERT_TESTIMONIALS_LINK="Testimonial"
