testimonial title fix

--- a/src/admin/language/en-GB/en-GB.com_xpert_testimonials.ini
+++ b/src/admin/language/en-GB/en-GB.com_xpert_testimonials.ini
@@ -3,6 +3,7 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
+JGLOBAL_LIST_NAME = " (by: %s)"
 COM_XPERT_TESTIMONIALS="Xpert Testimonials"
 COM_XPERT_TESTIMONIALS_ACCESS_HEADING="Access"
 COM_XPERT_TESTIMONIALS_BATCH_OPTIONS="Batch process the selected links"
@@ -18,7 +19,7 @@ COM_XPERT_TESTIMONIALS_ERR_TABLES_NAME="There is already a Testimonial with that
 COM_XPERT_TESTIMONIALS_ERR_TABLES_PROVIDE_URL="Please provide a valid URL"
 COM_XPERT_TESTIMONIALS_ERR_TABLES_TITLE="Your Testimonial must contain a title."
 COM_XPERT_TESTIMONIALS_ERROR_UNIQUE_ALIAS="Another Testimonial from this category has the same alias"
-COM_XPERT_TESTIMONIALS_FIELD_NAME_LABEL = "Provider Name"
+COM_XPERT_TESTIMONIALS_FIELD_NAME_LABEL = "Name"
 COM_XPERT_TESTIMONIALS_FIELD_NAME_DESC = "Testimonial provider Name"
 COM_XPERT_TESTIMONIALS_FIELD_DESIGNATION_LABEL = "Designation"
 COM_XPERT_TESTIMONIALS_FIELD_DESIGNATION_DESC = "Testimonial provider's designation"
