--- a/src/admin/language/en-GB/en-GB.com_xpert_testimonials.ini
+++ b/src/admin/language/en-GB/en-GB.com_xpert_testimonials.ini
@@ -36,8 +36,8 @@ COM_XPERT_TESTIMONIALS_FIELD_CONFIG_DESCRIPTION_DESC="Show/Hide the description 
 COM_XPERT_TESTIMONIALS_FIELD_CONFIG_HITS_DESC="Show/Hide hits."
 COM_XPERT_TESTIMONIALS_FIELD_CONFIG_ICON_DESC="If Icon is chosen above, select an icon to display with the Xpert Testimonials. If none is selected, the default icon will be used."
 COM_XPERT_TESTIMONIALS_FIELD_CONFIG_ICON_LABEL="Select Icon"
-COM_XPERT_TESTIMONIALS_FIELD_CONFIG_LINKDESCRIPTION_DESC="Show/Hide the links description."
-COM_XPERT_TESTIMONIALS_FIELD_CONFIG_LINKDESCRIPTION_LABEL="Links Description"
+COM_XPERT_TESTIMONIALS_FIELD_CONFIG_LINKDESCRIPTION_DESC="Show/Hide the description."
+COM_XPERT_TESTIMONIALS_FIELD_CONFIG_LINKDESCRIPTION_LABEL="Show Description"
 COM_XPERT_TESTIMONIALS_FIELD_CONFIG_OTHERCATS_DESC="Show/hide other categories."
 COM_XPERT_TESTIMONIALS_FIELD_CONFIG_OTHERCATS_LABEL="Other Categories"
 COM_XPERT_TESTIMONIALS_FIELD_CONFIG_SHOWREPORT_DESC="Show/Hide the Report Bad Link option."
